Fixed unwanted scrollbar in comment input (#1333)

--- a/public/components/common/Markdown.scss
+++ b/public/components/common/Markdown.scss
@@ -43,7 +43,7 @@
   }
 
   pre {
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: spacing(2);
     line-height: 1.45;
     background-color: var(--colors-gray-200);
